style.css
* {
  font-family: monospace;
}

body {
  display: flex;
  flex-direction: column;
  align-items: center;

  background-color: #323236;
  color: white;

  min-height: 100vh;
  margin: 0;
  padding: 0;
}

a {
  color: lightblue;
  text-decoration: none;
}

body p,
body h1 {
  text-align: center;
}

h1 {
  color: lightblue;
}

input {
  outline: none;
  text-align: center;
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.results-heading {
  color: lightgreen;
  font-size: xx-large;
}

.parent {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: 1fr;
  column-gap: 40px;
}

.parent p {
  text-align: right;
}

.div1 {
  grid-area: 1 / 1 / 2 / 2;
}
.div2 {
  grid-area: 1 / 2 / 2 / 3;
}
.div3 {
  grid-area: 1 / 3 / 2 / 4;
  justify-self: start;
}

.results-note,
.results-hz,
.results-ms {
  color: goldenrod;
  font-size: x-large;
  line-height: 1.1em;
}

.parent span {
  color: white;
}

.hide {
  display: none;
}

footer {
  margin-top: auto;
}

.spacer {
  padding: 1.5rem;
}

